--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway:100,600|Montserrat:900,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway:100,600|Montserrat:900,700i,700" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -19,7 +19,7 @@
                 <div class="modal-content p-5">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title mx-3" id="myModalLabel">Contact Form</h4>
+                        <h4 class="modal-title" id="myModalLabel">Contact Form</h4>
                     </div>
                     <div class="modal-body">
                         <form id="requestacallform" method="POST" name="requestacallform">
@@ -102,75 +102,82 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron pb-2 pt-6 text-center">
+        <div class="jumbotron py-6 m-0 text-center topcon">
             <img class="mt-5" src="assets/img/Logo.jpg" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
-        <div class="row d-flex justify-content-end">
-            <h1 class="titlebanner">FEATURED TOPICS</h1>
+        <div class="row d-flex justify-content-end topcon">
+            <h1 class="titlebanner bannerright">FEATURED TOPICS</h1>
         </div>
-        <div class="jumbotron pb-2 pt-6 text-center">
+        <div class="jumbotron pt-6 m-0 text-center topcon">
             <!--           Article Gallery-->
             <div class="cssrow">
                 <div class="column">
-                    <img src="assets/img/jess-watters-547394-unsplash.jpg">
+                    <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b39e2d2cd27a79fb8933c53114d7a5b5&auto=format&fit=crop&w=1050&q=80">
                     <img src="assets/img/william-white-34988-unsplash.jpg">
-                </div>                <div class="column">
+                </div>                
+                <div class="column">
                     <img src="assets/img/jess-watters-547394-unsplash.jpg">
-                    <img src="assets/img/william-white-34988-unsplash.jpg">
+                     
                 </div>
                 <div class="column">
                     <img src="assets/img/william-white-34988-unsplash.jpg">
                     <img src="assets/img/roman-bozhko-251412-unsplash.jpg">
                 </div>
             </div>
+        </div>
             <!--       Article Gallery-->
-            <h1 class="display-3 pt-5">Connect.</h1>
+            <div class="jumbotron py-6 m-0 text-center middlecon">
+            <h1 class="display-3">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
-            <iframe class="mainmap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6053.706816712172!2d-74.00827580653745!3d40.65516168490206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520485263039" width="1000" height="450" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6053.637850716652!2d-74.0096804554322!3d40.65592175470939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520877835974" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             <p class="lead m-0">
                 <a class="btn btn-primary btn-lg mt-4" href="#" role="button">Find out more</a>
             </p>
-            <p class="lead small"><a href="#" data-toggle="modal" data-target="#bannerformmodal"><u>Click here to register</u></a></p>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div id="accordion" class="col-md mb-3">
+            <p class="lead small"><a href="#" data-toggle="modal" data-target="#bannerformmodal"><u>Click here to register</u></a></p> 
+              <div class="row">
+                <div class="col"></div>
+                <div id="accordion" class="col-md-9 mb-3">
                     <div class="card">
-                        <button class="btn btn-link cordbtn text-left" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Company Type "Restaurants"
-                                </button>
+                        <button class="btn-primary-outline btn-link cordbtn text-left" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Companies By Type
+                        </button>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="row">
                                 <div class="card-body text-center">
-                                    <div class="list-group col-md-12">
+                                    <div class="list-group col-md">
                                         <a href="#" class="list-group-item list-group-item-action">Company 1</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 2</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 3</a>
                                     </div>
                                 </div>
                                 <div class="card-body text-center">
-                                    <div class="list-group col-md-12">
+                                    <div class="list-group col-md">
                                         <a href="#" class="list-group-item list-group-item-action">Company 7</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 8</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 9</a>
                                     </div>
                                 </div>
+                                <div class="list-group col-md">
+                                        <a href="#" class="list-group-item list-group-item-action">Company 1</a>
+                                        <a href="#" class="list-group-item list-group-item-action">Company 2</a>
+                                        <a href="#" class="list-group-item list-group-item-action">Company 3</a>
+                                    </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col"></div>
+            </div>  
             </div>
-        </div>
-        <div class="container-fluid my-5">
+        <div class="container-fluid topcon">
             <div class="row">
-                <h1 class="titlebanner">THE BLOG</h1>
+                <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
-        <div class="container">
-            <div class="row mt-5">
-                <div class="card-deck">
+        <div class="container topcon">
+            <div class="row topcon">
+                <div class="card-deck topcon">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
@@ -205,7 +212,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid mt-5" id="foot">
+    <div class="container-fluid" id="foot">
         <footer class="page-footer font-small blue pt-4 mt-4">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
@@ -250,7 +257,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<!--    Custom JS-->
+    <script src="assets/js/script.js"></script>
 
 </body>
 
