--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron py-6 m-0 text-center topcon">
-            <img class="mt-5" src="assets/img/Logo.jpg" width="200" height="auto">
+        <div class="jumbotron mb-5 pb-0 text-center topcon">
+            <img class="m-5" src="assets/img/Logo.jpg" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
-        <div class="row d-flex justify-content-end topcon">
+        <div class="row d-flex justify-content-end my-5 topcon">
             <h1 class="titlebanner bannerright">FEATURED TOPICS</h1>
         </div>
         <div class="jumbotron pt-6 m-0 text-center topcon">
@@ -116,7 +116,7 @@
                 <div class="column">
                     <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b39e2d2cd27a79fb8933c53114d7a5b5&auto=format&fit=crop&w=1050&q=80">
                     <img src="assets/img/william-white-34988-unsplash.jpg">
-                </div>                
+                </div>
                 <div class="column">
                     <img src="assets/img/jess-watters-547394-unsplash.jpg">
                      
@@ -168,9 +168,9 @@
                     </div>
                 </div>
                 <div class="col"></div>
-            </div>  
             </div>
-        <div class="container-fluid topcon">
+            </div>
+        <div class="container-fluid my-5 topcon">
             <div class="row">
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
