--- a/index.html
+++ b/index.html
@@ -102,28 +102,45 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron mb-5 pb-0 text-center topcon">
-            <img class="m-5" src="assets/img/Logo.jpg" width="200" height="auto">
+        <div class="jumbotron mb-5 pb-0 text-center">
+            <img class="m-5" src="assets/img/BMA%20Logo.png" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
-        <div class="row d-flex justify-content-end my-5 topcon">
+        <div class="row d-flex justify-content-end my-5">
             <h1 class="titlebanner bannerright">FEATURED TOPICS</h1>
         </div>
-        <div class="jumbotron pt-6 m-0 text-center topcon">
+        <div class="jumbotron pt-6 m-0 text-center">
             <!--           Article Gallery-->
             <div class="cssrow">
                 <div class="column">
-                    <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b39e2d2cd27a79fb8933c53114d7a5b5&auto=format&fit=crop&w=1050&q=80">
+                    <div class="article">
+                        <div class="artcap">
+                            <h3>Article 1</h3>
+                            <p>Short preview description for the article.</p>
+                        </div>
+                        <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b39e2d2cd27a79fb8933c53114d7a5b5&auto=format&fit=crop&w=1050&q=80">
+                    </div>
                     <img src="assets/img/william-white-34988-unsplash.jpg">
                 </div>
                 <div class="column">
+                    <div class="article">
                     <img src="assets/img/jess-watters-547394-unsplash.jpg">
-                     
+                    <div class="artcap">
+                            <h3>Article 2</h3>
+                            <p>Short preview description for the article.</p>
+                    </div>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="assets/img/william-white-34988-unsplash.jpg">
+                    <div class="article">
+                    <div class="artcap">
+                            <h3>Article 3</h3>
+                            <p>Short preview description for the article.</p>
+                    </div>
                     <img src="assets/img/roman-bozhko-251412-unsplash.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -138,9 +155,9 @@
             <p class="lead small"><a href="#" data-toggle="modal" data-target="#bannerformmodal"><u>Click here to register</u></a></p> 
               <div class="row">
                 <div class="col"></div>
-                <div id="accordion" class="col-md-9 mb-3">
+                <div id="accordion" class="col-md-6">
                     <div class="card">
-                        <button class="btn-primary-outline btn-link cordbtn text-left" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Companies By Type
+                        <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Companies By Type
                         </button>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="row">
@@ -170,14 +187,14 @@
                 <div class="col"></div>
             </div>
             </div>
-        <div class="container-fluid my-5 topcon">
+        <div class="container-fluid my-5">
             <div class="row">
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
-        <div class="container topcon">
-            <div class="row topcon">
-                <div class="card-deck topcon">
+        <div class="container mb-5">
+            <div class="row">
+                <div class="card-deck">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
@@ -189,7 +206,7 @@
                         </div>
                     </div>
                     <div class="card blogcard">
-                        <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?ixlib=rb-0.3.5&s=a5911803b489c97472a474d90ad226b3&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb" alt="Card image cap">
+                        <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
                             <div class="bloglay p-3">
                                 <h5 class="card-title"><a href="#">Blog Post #2</a></h5>
@@ -199,7 +216,7 @@
                         </div>
                     </div>
                     <div class="card blogcard">
-                        <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1440613905118-99b921706b5c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=36e1e24619c1947c6b775774a1e8eded&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
+                        <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
                             <div class="bloglay p-3">
                                 <h5 class="card-title"><a href="#">Blog Post #3</a></h5>
@@ -211,9 +228,36 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid my-5">
+            <div class="row d-flex justify-content-end my-5">
+                <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
+            </div>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="thumbnail">
+                            <a href="/w3images/lights.jpg">
+                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Lights" style="width:100%">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="thumbnail">
+                            <a href="/w3images/nature.jpg">
+                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Nature" style="width:100%">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="thumbnail">
+                            <a href="/w3images/fjords.jpg">
+                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Fjords" style="width:100%">
+                            </a>
+                        </div>
+                    </div>
+                </div>
     </div>
-    <div class="container-fluid" id="foot">
-        <footer class="page-footer font-small blue pt-4 mt-4">
+    <div class="container-fluid foot">
+        <footer class="page-footer font-small pt-4 mt-4">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-4 my-auto">
@@ -254,11 +298,13 @@
         </footer>
     </div>
 
+<!--    JQuery-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<!--    Bootstrap-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!--    Custom JS-->
-    <script src="assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 
 </body>
 
