--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
                         </div>
                         <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b39e2d2cd27a79fb8933c53114d7a5b5&auto=format&fit=crop&w=1050&q=80">
                     </div>
-                    <img src="assets/img/william-white-34988-unsplash.jpg">
+                    <div class="article">
+                        <img src="assets/img/william-white-34988-unsplash.jpg">
+                        <div class="artcap">
+                            <h3>Article 4</h3>
+                            <p>Short preview description for the article.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="column">
                     <div class="article">
@@ -133,7 +139,13 @@
                     </div>
                 </div>
                 <div class="column">
+                    <div class="article">
+                    <div class="artcap">
+                            <h3>Article 5</h3>
+                            <p>Short preview description for the article.</p>
+                    </div>
                     <img src="assets/img/william-white-34988-unsplash.jpg">
+                    </div>
                     <div class="article">
                     <div class="artcap">
                             <h3>Article 3</h3>
@@ -228,7 +240,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid my-5">
+        <div class="container-fluid my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
             </div>
@@ -256,7 +268,7 @@
                     </div>
                 </div>
     </div>
-    <div class="container-fluid foot">
+    <div class="container-fluid px-5 foot">
         <footer class="page-footer font-small pt-4 mt-4">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
@@ -269,7 +281,7 @@
                                     <button type="submit" class="btn btn-primary ml-3">Submit</button>
                                 </span>
                             </div>
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
                         </div>
                     </div>
                     <div class="col-md-4 text-center my-auto">
@@ -277,15 +289,15 @@
                             <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-instagram fa-3x"></i></a></li>
                             <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-facebook fa-3x"></i></a></li>
                             <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-twitter fa-3x"></i></a></li>
+                            <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-youtube fa-3x"></i></a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 my-auto">
-                        <h5 class="text-uppercase">Instagram Feed</h5>
+                    <div class="col-md-4 text-center my-auto">
                         <ul class="list-unstyled">
-                            <li><a href="#!">Link 1</a></li>
-                            <li><a href="#!">Link 2</a></li>
-                            <li><a href="#!">Link 3</a></li>
-                            <li><a href="#!">Link 4</a></li>
+                            <li class="list-inline-item mx-3"><a href="#!">Terms</a></li>
+                            <li class="list-inline-item mx-3"><a href="#!">Privacy</a></li>
+                            <li class="list-inline-item mx-3"><a href="#!">Security</a></li>
+                            <li class="list-inline-item"><a href="#!">Help</a></li>
                         </ul>
                     </div>
                 </div>
