--- a/index.html
+++ b/index.html
@@ -82,7 +82,23 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
-                            Products
+                            Job Board
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Product 1</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
+                            Programs
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Product 1</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
+                            Upcoming Events
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Product 1</a>
@@ -164,12 +180,13 @@
             <p class="lead m-0">
                 <a class="btn btn-primary btn-lg mt-4" href="#" role="button">Find out more</a>
             </p>
-            <p class="lead small"><a href="#" data-toggle="modal" data-target="#bannerformmodal"><u>Click here to register</u></a></p> 
+            <p class="lead small"><a href="#" data-toggle="modal" data-target="#bannerformmodal"><u>Click here to register</u></a></p>
+			<p>We create landing pages to fit all types of needs. Click below to explore more of the work we do for our members.</p>
               <div class="row">
                 <div class="col"></div>
                 <div id="accordion" class="col-md-6">
                     <div class="card">
-                        <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Companies By Type
+                        <button class="btn-primary-outline btn-link cordbtn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">COMPANIES BY TYPE<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                         </button>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="row">
@@ -187,10 +204,12 @@
                                         <a href="#" class="list-group-item list-group-item-action">Company 9</a>
                                     </div>
                                 </div>
-                                <div class="list-group col-md">
+                                <div class="card-body text-center">
+									<div class="list-group col-md">
                                         <a href="#" class="list-group-item list-group-item-action">Company 1</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 2</a>
                                         <a href="#" class="list-group-item list-group-item-action">Company 3</a>
+									</div>
                                     </div>
                             </div>
                         </div>
@@ -240,7 +259,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid my-5 instafeed">
+        <div class="container-fluid mx-0 my-5 instafeed">
             <div class="row d-flex justify-content-end my-5">
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
             </div>
@@ -295,8 +314,8 @@
                     <div class="col-md-4 text-center my-auto">
                         <ul class="list-unstyled">
                             <li class="list-inline-item mx-3"><a href="#!">Terms</a></li>
-                            <li class="list-inline-item mx-3"><a href="#!">Privacy</a></li>
-                            <li class="list-inline-item mx-3"><a href="#!">Security</a></li>
+                            <li class="list-inline-item mx-3"><a href="#!">Local Reps</a></li>
+                            <li class="list-inline-item mx-3"><a href="#!">Government</a></li>
                             <li class="list-inline-item"><a href="#!">Help</a></li>
                         </ul>
                     </div>
