--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             <div class="jumbotron py-6 m-0 text-center middlecon">
             <h1 class="display-3">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
+				
             <p class="lead m-0">
                 <a class="btn btn-primary btn-lg mt-4" href="#" role="button">Find out more</a>
             </p>
@@ -263,24 +264,24 @@
                 <h1 class="titlebanner bannerright">INSTAGRAM FEED</h1>
             </div>
                 <div class="row">
-                    <div class="col-md">
+                    <div class="col-lg">
                         <div class="thumbnail">
                             <a href="/w3images/lights.jpg">
-                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Lights" style="width:100%">
+                            <img class="img-fluid" src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Lights">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md">
+                    <div class="col-lg">
                         <div class="thumbnail">
                             <a href="/w3images/nature.jpg">
-                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Nature" style="width:100%">
+                            <img class="img-fluid" src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Nature">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md">
+                    <div class="col-lg">
                         <div class="thumbnail">
                             <a href="/w3images/fjords.jpg">
-                            <img src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Fjords" style="width:100%">
+                            <img class="img-fluid" src="assets/img/roman-bozhko-251412-unsplash.jpg" alt="Fjords">
                             </a>
                         </div>
                     </div>
