--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 <h1 class="titlebanner bannerleft">THE BLOG</h1>
             </div>
         </div>
-        <div class="container mb-5">
+        <div class="container-fluid mx-5">
             <div class="row">
-                <div class="card-deck">
+					<div class="col-lg-4 my-5">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
@@ -236,6 +236,8 @@
                             </div>
                         </div>
                     </div>
+					</div>
+					<div class="col-lg-4 my-5">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
@@ -246,6 +248,8 @@
                             </div>
                         </div>
                     </div>
+					</div>
+					<div class="col-lg-4 my-5">
                     <div class="card blogcard">
                         <img class="card-img-top img-responsive" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                         <div class="card-img-overlay p-0">
@@ -256,7 +260,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+					</div>
             </div>
         </div>
         <div class="container-fluid mx-0 my-5 instafeed">
