--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <footer class="page-footer font-small pt-4 mt-4">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
-                    <div class="col-md-4 my-auto">
+                    <div class="col-lg-4 my-auto">
                         <div class="form-group">
                             <label for="exampleInputEmail1">SIGN UP FOR OUR NEWSLETTER</label>
                             <div class="input-group">
@@ -327,15 +327,15 @@
                             <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center my-auto">
+                    <div class="col-lg-4 text-center my-auto">
                         <ul class="list-unstyled" id="icons">
-                            <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-instagram fa-3x"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-facebook fa-3x"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-twitter fa-3x"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="mx-3"><i class="fab fa-youtube fa-3x"></i></a></li>
+                            <li class="list-inline-item"><a href="#" class="m-3"><i class="fab fa-instagram fa-3x"></i></a></li>
+                            <li class="list-inline-item"><a href="#" class="m-3"><i class="fab fa-facebook fa-3x"></i></a></li>
+                            <li class="list-inline-item"><a href="#" class="m-3"><i class="fab fa-twitter fa-3x"></i></a></li>
+                            <li class="list-inline-item"><a href="#" class="m-3"><i class="fab fa-youtube fa-3x"></i></a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 text-center my-auto">
+                    <div class="col-lg-4 text-center my-auto">
                         <ul class="list-unstyled">
                             <li class="list-inline-item mx-3"><a href="#!">Terms</a></li>
                             <li class="list-inline-item mx-3"><a href="#!">Local Reps</a></li>
